add run script
