# docs/swagger.json
@@ -82,6 +82,47 @@
             }
         },
         "/ext/{uid}": {
+            "get": {
+                "description": "get client's all groups and tabs",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "pull"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "client uid",
+                        "name": "uid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/ExtensionResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/ent.ExtensionClient"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "store one or more tab group",
                 "consumes": [
@@ -118,19 +159,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/ExtensionResponse"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "type": "object"
-                                        }
-                                    }
-                                }
-                            ]
+                            "$ref": "#/definitions/ExtensionResponse"
                         }
                     }
                 }
@@ -148,6 +177,117 @@
                     "type": "any"
                 },
                 "error": {
+                    "type": "string"
+                }
+            }
+        },
+        "ent.ExtensionClient": {
+            "type": "object",
+            "properties": {
+                "client_uid": {
+                    "description": "ClientUID holds the value of the \"client_uid\" field.",
+                    "type": "string"
+                },
+                "edges": {
+                    "description": "Edges holds the relations/edges for other nodes in the graph.\nThe values are being populated by the ExtensionClientQuery when eager-loading is set.",
+                    "$ref": "#/definitions/ent.ExtensionClientEdges"
+                },
+                "extension_id": {
+                    "description": "ExtensionID holds the value of the \"extension_id\" field.",
+                    "type": "string"
+                },
+                "id": {
+                    "description": "ID of the ent.",
+                    "type": "integer"
+                },
+                "last_access_time": {
+                    "description": "LastAccessTime holds the value of the \"last_access_time\" field.",
+                    "type": "string"
+                },
+                "name": {
+                    "description": "Name holds the value of the \"name\" field.",
+                    "type": "string"
+                }
+            }
+        },
+        "ent.ExtensionClientEdges": {
+            "type": "object",
+            "properties": {
+                "groups": {
+                    "description": "Groups holds the value of the groups edge.",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/ent.Group"
+                    }
+                }
+            }
+        },
+        "ent.Group": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "description": "CreatedAt holds the value of the \"created_at\" field.",
+                    "type": "string"
+                },
+                "edges": {
+                    "description": "Edges holds the relations/edges for other nodes in the graph.\nThe values are being populated by the GroupQuery when eager-loading is set.",
+                    "$ref": "#/definitions/ent.GroupEdges"
+                },
+                "id": {
+                    "description": "ID of the ent.",
+                    "type": "integer"
+                },
+                "name": {
+                    "description": "Name holds the value of the \"name\" field.",
+                    "type": "string"
+                },
+                "option": {
+                    "description": "Option holds the value of the \"option\" field.",
+                    "$ref": "#/definitions/entity.GroupOption"
+                },
+                "share_url": {
+                    "description": "ShareURL holds the value of the \"share_url\" field.",
+                    "type": "string"
+                },
+                "uid": {
+                    "description": "UID holds the value of the \"uid\" field.",
+                    "type": "string"
+                }
+            }
+        },
+        "ent.GroupEdges": {
+            "type": "object",
+            "properties": {
+                "tabs": {
+                    "description": "Tabs holds the value of the tabs edge.",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/ent.Tab"
+                    }
+                }
+            }
+        },
+        "ent.Tab": {
+            "type": "object",
+            "properties": {
+                "favicon": {
+                    "description": "Favicon holds the value of the \"favicon\" field.",
+                    "type": "string"
+                },
+                "id": {
+                    "description": "ID of the ent.",
+                    "type": "integer"
+                },
+                "name": {
+                    "description": "Name holds the value of the \"name\" field.",
+                    "type": "string"
+                },
+                "seq": {
+                    "description": "Seq holds the value of the \"seq\" field.\nsequence",
+                    "type": "integer"
+                },
+                "url": {
+                    "description": "URL holds the value of the \"url\" field.",
                     "type": "string"
                 }
             }
